src/main/default/objects/FX_Settings__c/FX_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FX Settings</label>
</CustomObject>