src/main/default/objects/FX_Settings__c/fields/AuditLogRetainingDays__c.field-meta.xml
<CustomField>
    <fullName>AuditLogRetainingDays__c</fullName>
    <defaultValue>30</defaultValue>
    <label>AuditLogRetainingDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>