src/main/default/objects/FX_Settings__c/fields/AuditLogTypeForTruncation__c.field-meta.xml
<CustomField>
    <fullName>AuditLogTypeForTruncation__c</fullName>
    <defaultValue>'SyncComplete,SyncDownloadComplete'</defaultValue>
    <label>AuditLogTypeForTruncation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>