src/main/default/objects/FX_Settings__c/fields/AutoAddJobCreatorToCrew__c.field-meta.xml
<CustomField>
    <fullName>AutoAddJobCreatorToCrew__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Automatically create a Crew Planning entry for Job creator if this flag is set to true.</description>
    <inlineHelpText>Automatically create a Crew Planning entry for Job creator if this flag is set to true.</inlineHelpText>
    <label>AutoAddJobCreatorToCrew</label>
    <type>Checkbox</type>
</CustomField>