src/main/default/objects/FX_Settings__c/fields/AutoFollowJobTicket__c.field-meta.xml
<CustomField>
    <fullName>AutoFollowJobTicket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically follow the Job and its Tickets on Chatter if the user has an entry in Job subscription (SyncAssignment). When the user is removed from SyncAssignment, stop following Job/Ticket.</description>
    <label>Auto Follow Job and Ticket</label>
    <type>Checkbox</type>
</CustomField>