src/main/default/objects/FX_Settings__c/fields/CDN_CMB_Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>CDN_CMB_Resource_URL__c</fullName>
    <defaultValue>"cmb/LATEST"</defaultValue>
    <label>CDN CMB Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>