src/main/default/objects/FX_Settings__c/fields/CDN_IIB_Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>CDN_IIB_Resource_URL__c</fullName>
    <defaultValue>"iib/LATEST"</defaultValue>
    <label>CDN Invoice Item Builder Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>