src/main/default/objects/FX_Settings__c/fields/CDN_JSD_Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>CDN_JSD_Resource_URL__c</fullName>
    <defaultValue>"prod/jsd/LATEST"</defaultValue>
    <label>CDN JSD Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>