src/main/default/objects/FX_Settings__c/fields/CDN_JWB_Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>CDN_JWB_Resource_URL__c</fullName>
    <defaultValue>"prod/jwb/LATEST"</defaultValue>
    <label>CDN Job Whiteboard Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>