src/main/default/objects/FX_Settings__c/fields/CDN_PacketViewer_Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>CDN_PacketViewer_Resource_URL__c</fullName>
    <defaultValue>"prod/pv/LATEST"</defaultValue>
    <label>CDN PacketViewer Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>