src/main/default/objects/FX_Settings__c/fields/CDN_PBB_Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>CDN_PBB_Resource_URL__c</fullName>
    <defaultValue>"prod/pbb/LATEST"</defaultValue>
    <label>CDN Builder Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>