src/main/default/objects/FX_Settings__c/fields/CDN_QIB_Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>CDN_QIB_Resource_URL__c</fullName>
    <defaultValue>"prod/qib/LATEST"</defaultValue>
    <label>CDN Quote Item Builder Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>