src/main/default/objects/FX_Settings__c/fields/CDN_RV_Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>CDN_RV_Resource_URL__c</fullName>
    <defaultValue>"prod/rv/LATEST"</defaultValue>
    <label>CDN Report Viewer Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>