src/main/default/objects/FX_Settings__c/fields/CDN_TIB_Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>CDN_TIB_Resource_URL__c</fullName>
    <defaultValue>"prod/tib/LATEST"</defaultValue>
    <label>CDN Ticket Item Builder Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>