src/main/default/objects/FX_Settings__c/fields/CrewPlanningSkipAssignPriceBookItem__c.field-meta.xml
<CustomField>
    <fullName>CrewPlanningSkipAssignPriceBookItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, skip auto assigning Role_on_Job using Crew Member's (Contact) 'Job Title from Catalog' (Catalog_Item__c) to find related Price Book Item from the Job's Price Book.</description>
    <label>CrewPlanningSkipAssignPriceBookItem</label>
    <type>Checkbox</type>
</CustomField>