src/main/default/objects/FX_Settings__c/fields/DisableEquipmentTriggerForPMS__c.field-meta.xml
<CustomField>
    <fullName>DisableEquipmentTriggerForPMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, updating Equipment will skip PMS processing.</description>
    <label>DisableEquipmentTriggerForPMS</label>
    <type>Checkbox</type>
</CustomField>