src/main/default/objects/FX_Settings__c/fields/EnableInventoryTracking__c.field-meta.xml
<CustomField>
    <fullName>EnableInventoryTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set it to true to turn on Inventory Tracking. When it is set to false, the Inventory Tracking module won't run even the Catalog Items have Track Inventory checked.</description>
    <label>EnableInventoryTracking</label>
    <type>Checkbox</type>
</CustomField>