src/main/default/objects/FX_Settings__c/fields/Equipment_Exact_SearchField__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Exact_SearchField__c</fullName>
    <defaultValue/>
    <label>Equipment exact match search field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>