src/main/default/objects/FX_Settings__c/fields/EquipmentPlanningSkipAssignPriceBookItem__c.field-meta.xml
<CustomField>
    <fullName>EquipmentPlanningSkipAssignPriceBookItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, skip auto assigning Price Book Item using Equipment's Catalog Item value to find related Price Book Item from the Job's Price Book.</description>
    <label>EquipmentPlanningSkipAssignPriceBookItem</label>
    <type>Checkbox</type>
</CustomField>