src/main/default/objects/FX_Settings__c/fields/Job_Whiteboard_Role_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Job_Whiteboard_Role_Record_Types__c</fullName>
    <defaultValue>"Labor"</defaultValue>
    <label>Job Whiteboard Role Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>