src/main/default/objects/FX_Settings__c/fields/JSD_Default_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>JSD_Default_Dashboard__c</fullName>
    <label>JSD Default Dashboard</label>
    <length>50</length>
    <type>Text</type>
</CustomField>