src/main/default/objects/FX_Settings__c/fields/MixPanelSecurityToken__c.field-meta.xml
<CustomField>
    <fullName>MixPanelSecurityToken__c</fullName>
    <defaultValue>"dfe456579c77b0bd5fec94f106e0e094"</defaultValue>
    <label>MixPanelSecurityToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>