src/main/default/objects/FX_Settings__c/fields/MixPanelStopTracking__c.field-meta.xml
<CustomField>
    <fullName>MixPanelStopTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True to stop MixPanel tracking</description>
    <label>MixPanelStopTracking</label>
    <type>Checkbox</type>
</CustomField>