src/main/default/objects/FX_Settings__c/fields/OverrideBatchSize__c.field-meta.xml
<CustomField>
    <fullName>OverrideBatchSize__c</fullName>
    <defaultValue>40</defaultValue>
    <description>Do NOT touch this if you are NOT administrator. 
The number of Ticket Items could be processed in one batch and it must be less than 80 since SFDC only allows 100 soql queries per transaction.</description>
    <label>OverrideBatchSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>