src/main/default/objects/FX_Settings__c/fields/PacketViewer_Instance_URL_Override__c.field-meta.xml
<CustomField>
    <fullName>PacketViewer_Instance_URL_Override__c</fullName>
    <label>PacketViewer Instance URL Override</label>
    <description>Provides an override property to set the appropriate base/instance url in the case the primary method isn't sufficient.  This should be set to the "domain name" of this page (e.g. https://&lt;host-name>.cloudforce.com ). Setting this is usually only necessary if the sub-domain is "cloudforce.com" and the Packet Viewer is having issues re-running packets.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>