src/main/default/objects/FX_Settings__c/fields/PBItemBldrCIMaxFlyoutWidth__c.field-meta.xml
<CustomField>
    <fullName>PBItemBldrCIMaxFlyoutWidth__c</fullName>
    <description>This is the width for the CatalogItem picker on the ProcebookBuilder page.
It can be set at the Profile level, and overridden at the User level.
It defaults to 80% of the browser's window width. Minimum width of 500px is enforced.</description>
    <label>PBItem Bldr CatalogItem Max FlyoutWidth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>