src/main/default/objects/FX_Settings__c/fields/Price_Book_Item_Exact_SearchField__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item_Exact_SearchField__c</fullName>
    <defaultValue/>
    <label>PriceBookItem exact match search field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>