src/main/default/objects/FX_Settings__c/fields/SkipCrewPlanningTriggerOnQualification__c.field-meta.xml
<CustomField>
    <fullName>SkipCrewPlanningTriggerOnQualification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, resources do not meet the job’s qualification requirements will be allowed.</description>
    <label>SkipCrewPlanningTriggerOnQualification</label>
    <type>Checkbox</type>
</CustomField>