src/main/default/objects/FX_Settings__c/fields/SkipDefaultingPriceBookItemFields__c.field-meta.xml
<CustomField>
    <fullName>SkipDefaultingPriceBookItemFields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Defaulting PriceBookItem Values</label>
    <type>Checkbox</type>
</CustomField>