src/main/default/objects/FX_Settings__c/fields/SkipEquipPlanningTriggerOnQualification__c.field-meta.xml
<CustomField>
    <fullName>SkipEquipPlanningTriggerOnQualification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, resources do not meet the job’s qualification requirements will be allowed.</description>
    <label>SkipEquipPlanningTriggerOnQualification</label>
    <type>Checkbox</type>
</CustomField>