src/main/default/objects/FX_Settings__c/fields/SuspendRuleEngine__c.field-meta.xml
<CustomField>
    <fullName>SuspendRuleEngine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rule Engine suicide pill to bypass RuleEngine in the triggers</description>
    <label>SuspendRuleEngine</label>
    <type>Checkbox</type>
</CustomField>