src/main/default/objects/FX_Settings__c/fields/SyncMetadataCacheDurationMinutes__c.field-meta.xml
<CustomField>
    <fullName>SyncMetadataCacheDurationMinutes__c</fullName>
    <defaultValue>1440</defaultValue>
    <description>The time (in minutes) to wait before checking metadata (the describe calls).</description>
    <label>SyncMetadataCacheDurationMinutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>