src/main/default/objects/FX_Settings__c/fields/SyncV4Config__c.field-meta.xml
<CustomField>
    <fullName>SyncV4Config__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Sync Config option for Sync V4</description>
    <label>Sync v4 Config</label>
    <type>Checkbox</type>
</CustomField>