src/main/default/objects/FX_Settings__c/fields/SyncVersion__c.field-meta.xml
<CustomField>
    <fullName>SyncVersion__c</fullName>
    <defaultValue>2</defaultValue>
    <label>SyncVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>