src/main/default/objects/FX_Settings__c/fields/TicketItemWarehouseQty__c.field-meta.xml
<CustomField>
    <fullName>TicketItemWarehouseQty__c</fullName>
    <defaultValue>'Qty__c'</defaultValue>
    <description>The API name of quantity field for WarehouseItem inventory update</description>
    <label>TicketItemWarehouseQty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>