src/main/default/objects/FX_Settings__c/fields/TurnOffJobPropagator__c.field-meta.xml
<CustomField>
    <fullName>TurnOffJobPropagator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TurnOffJobPropagator</label>
    <type>Checkbox</type>
</CustomField>