src/main/default/objects/FX_Settings__c/fields/TurnOffStatusHistoryTrigger__c.field-meta.xml
<CustomField>
    <fullName>TurnOffStatusHistoryTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TurnOffStatusHistoryTrigger</label>
    <type>Checkbox</type>
</CustomField>