src/main/default/objects/FX_Settings__c/fields/UserTriggerKeepInactiveUserSyncConfigs__c.field-meta.xml
<CustomField>
    <fullName>UserTriggerKeepInactiveUserSyncConfigs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UserTriggerKeepInactiveUserSyncConfigs</label>
    <type>Checkbox</type>
</CustomField>