src/main/default/objects/FX_Settings__c/fields/UserTriggerSkipPackageLicenseCleanup__c.field-meta.xml
<CustomField>
    <fullName>UserTriggerSkipPackageLicenseCleanup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, skip package license clean up for inactive users. The packages include 'FX5', 'FXTKT', 'FXEAM', 'FXT2', 'FXJSD', 'FXMAP'.</description>
    <label>UserTriggerSkipPackageLicenseCleanup</label>
    <type>Checkbox</type>
</CustomField>